# dcs

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: dcs-action.yml
src/dcs/: main.py
