[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcs"
version = "0.1.0"
description = "Discord Commit Summarizer using AI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Miguel Ángel", email = "miguel07alm@protonmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests", # For sending requests to Discord webhook
    "python-dotenv", # For loading environment variables
    "GitPython", # For interacting with Git repositories
    # "google-generativeai", # Using OpenAI interface instead
    "openai", # For Gemini API via OpenAI interface
]

[project.urls]
Homepage = "https://github.com/miguel07alm/dcs"

[project.scripts]
dcs = "dcs.main:main"
